@@ -1542,12 +1542,101 @@ return|return
 name|res
 return|;
 block|}
-comment|/** accumulates per-segment single-valued facet counts, mapping to global ordinal space */
-comment|// specialized since the single-valued case is different
+comment|/** accumulates per-segment single-valued facet counts */
 DECL|method|accumSingle
 specifier|static
 name|void
 name|accumSingle
+parameter_list|(
+name|int
+name|counts
+index|[]
+parameter_list|,
+name|int
+name|startTermIndex
+parameter_list|,
+name|SortedDocValues
+name|si
+parameter_list|,
+name|DocIdSetIterator
+name|disi
+parameter_list|,
+name|int
+name|subIndex
+parameter_list|,
+name|OrdinalMap
+name|map
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|startTermIndex
+operator|==
+operator|-
+literal|1
+operator|&&
+operator|(
+name|map
+operator|==
+literal|null
+operator|||
+name|si
+operator|.
+name|getValueCount
+argument_list|()
+operator|<
+name|disi
+operator|.
+name|cost
+argument_list|()
+operator|*
+literal|10
+operator|)
+condition|)
+block|{
+comment|// no prefixing, not too many unique values wrt matching docs (lucene/facets heuristic):
+comment|//   collect separately per-segment, then map to global ords
+name|accumSingleSeg
+argument_list|(
+name|counts
+argument_list|,
+name|si
+argument_list|,
+name|disi
+argument_list|,
+name|subIndex
+argument_list|,
+name|map
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// otherwise: do collect+map on the fly
+name|accumSingleGeneric
+argument_list|(
+name|counts
+argument_list|,
+name|startTermIndex
+argument_list|,
+name|si
+argument_list|,
+name|disi
+argument_list|,
+name|subIndex
+argument_list|,
+name|map
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|/** accumulates per-segment single-valued facet counts, mapping to global ordinal space on-the-fly */
+DECL|method|accumSingleGeneric
+specifier|static
+name|void
+name|accumSingleGeneric
 parameter_list|(
 name|int
 name|counts
@@ -1653,11 +1742,214 @@ operator|++
 expr_stmt|;
 block|}
 block|}
-comment|/** accumulates per-segment multi-valued facet counts, mapping to global ordinal space */
+comment|/** "typical" single-valued faceting: not too many unique values, no prefixing. maps to global ordinals as a separate step */
+DECL|method|accumSingleSeg
+specifier|static
+name|void
+name|accumSingleSeg
+parameter_list|(
+name|int
+name|counts
+index|[]
+parameter_list|,
+name|SortedDocValues
+name|si
+parameter_list|,
+name|DocIdSetIterator
+name|disi
+parameter_list|,
+name|int
+name|subIndex
+parameter_list|,
+name|OrdinalMap
+name|map
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// First count in seg-ord space:
+specifier|final
+name|int
+name|segCounts
+index|[]
+decl_stmt|;
+if|if
+condition|(
+name|map
+operator|==
+literal|null
+condition|)
+block|{
+name|segCounts
+operator|=
+name|counts
+expr_stmt|;
+block|}
+else|else
+block|{
+name|segCounts
+operator|=
+operator|new
+name|int
+index|[
+literal|1
+operator|+
+name|si
+operator|.
+name|getValueCount
+argument_list|()
+index|]
+expr_stmt|;
+block|}
+name|int
+name|doc
+decl_stmt|;
+while|while
+condition|(
+operator|(
+name|doc
+operator|=
+name|disi
+operator|.
+name|nextDoc
+argument_list|()
+operator|)
+operator|!=
+name|DocIdSetIterator
+operator|.
+name|NO_MORE_DOCS
+condition|)
+block|{
+name|segCounts
+index|[
+literal|1
+operator|+
+name|si
+operator|.
+name|getOrd
+argument_list|(
+name|doc
+argument_list|)
+index|]
+operator|++
+expr_stmt|;
+block|}
+comment|// migrate to global ords (if necessary)
+if|if
+condition|(
+name|map
+operator|!=
+literal|null
+condition|)
+block|{
+name|migrateGlobal
+argument_list|(
+name|counts
+argument_list|,
+name|segCounts
+argument_list|,
+name|subIndex
+argument_list|,
+name|map
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|/** accumulates per-segment multi-valued facet counts */
 DECL|method|accumMulti
 specifier|static
 name|void
 name|accumMulti
+parameter_list|(
+name|int
+name|counts
+index|[]
+parameter_list|,
+name|int
+name|startTermIndex
+parameter_list|,
+name|SortedSetDocValues
+name|si
+parameter_list|,
+name|DocIdSetIterator
+name|disi
+parameter_list|,
+name|int
+name|subIndex
+parameter_list|,
+name|OrdinalMap
+name|map
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|startTermIndex
+operator|==
+operator|-
+literal|1
+operator|&&
+operator|(
+name|map
+operator|==
+literal|null
+operator|||
+name|si
+operator|.
+name|getValueCount
+argument_list|()
+operator|<
+name|disi
+operator|.
+name|cost
+argument_list|()
+operator|*
+literal|10
+operator|)
+condition|)
+block|{
+comment|// no prefixing, not too many unique values wrt matching docs (lucene/facets heuristic):
+comment|//   collect separately per-segment, then map to global ords
+name|accumMultiSeg
+argument_list|(
+name|counts
+argument_list|,
+name|si
+argument_list|,
+name|disi
+argument_list|,
+name|subIndex
+argument_list|,
+name|map
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// otherwise: do collect+map on the fly
+name|accumMultiGeneric
+argument_list|(
+name|counts
+argument_list|,
+name|startTermIndex
+argument_list|,
+name|si
+argument_list|,
+name|disi
+argument_list|,
+name|subIndex
+argument_list|,
+name|map
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|/** accumulates per-segment multi-valued facet counts, mapping to global ordinal space on-the-fly */
+DECL|method|accumMultiGeneric
+specifier|static
+name|void
+name|accumMultiGeneric
 parameter_list|(
 name|int
 name|counts
@@ -1811,6 +2103,262 @@ operator|>=
 literal|0
 condition|)
 do|;
+block|}
+block|}
+comment|/** "typical" multi-valued faceting: not too many unique values, no prefixing. maps to global ordinals as a separate step */
+DECL|method|accumMultiSeg
+specifier|static
+name|void
+name|accumMultiSeg
+parameter_list|(
+name|int
+name|counts
+index|[]
+parameter_list|,
+name|SortedSetDocValues
+name|si
+parameter_list|,
+name|DocIdSetIterator
+name|disi
+parameter_list|,
+name|int
+name|subIndex
+parameter_list|,
+name|OrdinalMap
+name|map
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// First count in seg-ord space:
+specifier|final
+name|int
+name|segCounts
+index|[]
+decl_stmt|;
+if|if
+condition|(
+name|map
+operator|==
+literal|null
+condition|)
+block|{
+name|segCounts
+operator|=
+name|counts
+expr_stmt|;
+block|}
+else|else
+block|{
+name|segCounts
+operator|=
+operator|new
+name|int
+index|[
+literal|1
+operator|+
+operator|(
+name|int
+operator|)
+name|si
+operator|.
+name|getValueCount
+argument_list|()
+index|]
+expr_stmt|;
+block|}
+name|int
+name|doc
+decl_stmt|;
+while|while
+condition|(
+operator|(
+name|doc
+operator|=
+name|disi
+operator|.
+name|nextDoc
+argument_list|()
+operator|)
+operator|!=
+name|DocIdSetIterator
+operator|.
+name|NO_MORE_DOCS
+condition|)
+block|{
+name|si
+operator|.
+name|setDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|int
+name|term
+init|=
+operator|(
+name|int
+operator|)
+name|si
+operator|.
+name|nextOrd
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|term
+operator|<
+literal|0
+condition|)
+block|{
+name|counts
+index|[
+literal|0
+index|]
+operator|++
+expr_stmt|;
+comment|// missing
+block|}
+else|else
+block|{
+do|do
+block|{
+name|segCounts
+index|[
+literal|1
+operator|+
+name|term
+index|]
+operator|++
+expr_stmt|;
+block|}
+do|while
+condition|(
+operator|(
+name|term
+operator|=
+operator|(
+name|int
+operator|)
+name|si
+operator|.
+name|nextOrd
+argument_list|()
+operator|)
+operator|>=
+literal|0
+condition|)
+do|;
+block|}
+block|}
+comment|// migrate to global ords (if necessary)
+if|if
+condition|(
+name|map
+operator|!=
+literal|null
+condition|)
+block|{
+name|migrateGlobal
+argument_list|(
+name|counts
+argument_list|,
+name|segCounts
+argument_list|,
+name|subIndex
+argument_list|,
+name|map
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|/** folds counts in segment ordinal space (segCounts) into global ordinal space (counts) */
+DECL|method|migrateGlobal
+specifier|static
+name|void
+name|migrateGlobal
+parameter_list|(
+name|int
+name|counts
+index|[]
+parameter_list|,
+name|int
+name|segCounts
+index|[]
+parameter_list|,
+name|int
+name|subIndex
+parameter_list|,
+name|OrdinalMap
+name|map
+parameter_list|)
+block|{
+comment|// missing count
+name|counts
+index|[
+literal|0
+index|]
+operator|+=
+name|segCounts
+index|[
+literal|0
+index|]
+expr_stmt|;
+comment|// migrate actual ordinals
+for|for
+control|(
+name|int
+name|ord
+init|=
+literal|1
+init|;
+name|ord
+operator|<
+name|segCounts
+operator|.
+name|length
+condition|;
+name|ord
+operator|++
+control|)
+block|{
+name|int
+name|count
+init|=
+name|segCounts
+index|[
+name|ord
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|count
+operator|!=
+literal|0
+condition|)
+block|{
+name|counts
+index|[
+literal|1
+operator|+
+operator|(
+name|int
+operator|)
+name|map
+operator|.
+name|getGlobalOrd
+argument_list|(
+name|subIndex
+argument_list|,
+name|ord
+operator|-
+literal|1
+argument_list|)
+index|]
+operator|+=
+name|count
+expr_stmt|;
+block|}
 block|}
 block|}
 block|}
