@@ -3853,9 +3853,6 @@ operator|+
 name|workerFacetValue
 argument_list|,
 name|e
-operator|.
-name|getCause
-argument_list|()
 argument_list|)
 throw|;
 block|}
