@@ -174,6 +174,8 @@ Optimizations
 * SOLR-5189: Solr 4.x Web UI Log Viewer does not display 'date' column from 
   logs (steffkes)
 
+* SOLR-5512: Optimize DocValuesFacets. (Robert Muir)
+
 Other Changes
 ---------------------
 
